# voicevault

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.agent/: README.md
.agent/instructions/: data-boundaries.md  repository.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml
designs/voicevault-local-rag-mvp/: VoiceVault Local RAG Prototype.html  _d_meta.json  app.jsx  components.jsx  data.js  resource-api.js  resource-app.js  resource-ui.jsx  styles.css
docs/: DATA-POLICY.md
scripts/: benchmark_personal_scale.py
src/voicevault/: accounts.py  (+68 more)
tests/: test_accounts.py  test_action_runs.py  test_analysis.py  test_answer.py  test_answer_provider.py  test_answer_quality.py  test_answer_regression.py  test_app_db.py  test_capture.py  test_cli.py  test_collection_api.py  test_collection_jobs.py  test_collection_results.py  test_collection_submit.py  test_collections.py  test_comparison.py  test_coverage.py  test_dashboard.py  test_diagnostics.py  test_embedding.py  test_events.py  test_evidence_store.py  test_examples.py  test_fulltext_index.py  test_guide.py  test_historical_archive_import.py  test_importers.py  test_index.py  test_index_api.py  test_index_jobs.py  test_index_service.py  test_kb.py  test_knowledge_chunks.py  test_legacy_import.py  test_next_actions.py  test_page_read_models_api.py  test_person_archive.py  test_person_archive_api.py  test_person_archive_e2e.py  test_post_archive.py  (+23 more)
(+4 files in other folders)
